tests/invalid/ann_assign_set_wrong_type/main.py
def run_case() -> None:
    z: int = set()

if __name__ == "__main__":
    run_case()
